# collections-causal-allocation

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: build_dataset.py
docs/: ADR-0001-rdd-milp-choice.md  references.md  resume_blueprint.md  security_audit.md
notebooks/: _build.py  demo.ipynb
src/: __init__.py  config.py  data_loader.py
src/evaluation/: __init__.py  metrics.py
src/milp/: __init__.py  optimizer.py  sensitivity.py
src/rdd/: __init__.py  bandwidth.py  covariate_balance.py  density_test.py  local_linear.py  placebo.py
src/viz/: __init__.py  kpi_plots.py  milp_plots.py  rdd_plots.py
tests/: test_data_loader.py  test_milp.py  test_rdd.py
